# ros2_ws

./: rodar.md
ros2_ws/: .gitignore  README.md
ros2_ws/docs/: EXPERIMENT_PROTOCOL.md
ros2_ws/fleet_ui/: README.md
ros2_ws/fleet_ui/backend/: main.py  run.sh
ros2_ws/fleet_ui/frontend/: package-lock.json
ros2_ws/fleet_ui/frontend/src/: App.jsx  index.css
ros2_ws/models/turtlebot3_waffle/: model.sdf
ros2_ws/scripts/: analyze_runs.py  diagnose_nav_fleet.sh  experiment_repeatability.py  experiment_repetability.py  explore_by_waypoints.py  test_fleet_cases.py  test_roles_automatic.py
ros2_ws/src/fleet_data_collector/: package.xml  setup.cfg  setup.py
ros2_ws/src/fleet_data_collector/fleet_data_collector/: __init__.py  main.py
ros2_ws/src/fleet_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/fleet_msgs/msg/: FleetStatus.msg  RobotState.msg
ros2_ws/src/fleet_msgs/srv/: Cancel.srv  CollectionStatus.srv  DisableCollection.srv  EnableCollection.srv  GoToPoint.srv  ListRobots.srv  ListRoutes.srv  PlayRoute.srv  StartRecord.srv  StopRecord.srv
ros2_ws/src/fleet_orchestrator/: package.xml  setup.cfg  setup.py
ros2_ws/src/fleet_orchestrator/config/: roles.yaml  single_robot_sim.yaml
ros2_ws/src/fleet_orchestrator/fleet_orchestrator/: __init__.py  main.py
ros2_ws/src/fleet_orchestrator/launch/: fleet.launch.py
ros2_ws/src/route_tool/: package.xml  setup.cfg  setup.py
ros2_ws/src/route_tool/resource/: route_tool
ros2_ws/src/route_tool/route_tool/: main.py
