<?xml version="1.0"?>
<package format="3">
  <name>fleet_msgs</name>
  <version>0.1.0</version>
  <description>Mensagens e serviços comuns para fleet orchestrator e data collector (UI-ready).</description>
  <maintainer email="eduardo@example.com">Eduardo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rosidl_default_runtime</depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
