<?xml version="1.0"?>
<package format="3">
  <name>route_tool</name>
  <version>0.0.1</version>
  <description>Ferramenta de gravação e reprodução de rotas para ROS 2 Jazzy.</description>

  <maintainer email="eduardo@example.com">Eduardo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_type>ament_python</build_type>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>

  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
